# spectromicroscopy

./: .gitignore  404.html  AGENTS.md  MANIFEST.in  MISTRAL2Mantis.ipynb  Mantis_batch_settings.txt  Mrc.py  README.md  accel_sdf.py  analyze.py  aps_hdf5.py  data_stack.py  data_struct.py  dialogalign.ui  file_bim.py  file_dataexch_hdf5.py  file_ncb.py  file_nexus_hdf5.py  file_sdf.py  file_sm_netcdf.py  file_stk.py  file_tif.py  file_xrm.py  hdf5_stack.py  henke.py  index.html  logo_2l_32.py  logo_2ndlook.py  logos.py  mantis.py  mantis_gui.py  mantis_py2.7_PyQt4_v2.3.05.py  mantis_qt.py  mantis_wx.py  mkdocs.yml  nnma.py  pageloaddata.ui  pagemap.ui  pyproject.toml  setup.py  (+12 more)
TomoCS/: forward_backward_tv.py  projections.py  sirt.py  tv_denoising.py  util.py
docs/: CNAME  index.md
file_plugins/: __init__.py  file_bim.py  file_csv.py  file_dataexch_hdf5.py  file_json.py  file_ncb.py  file_nexus_hdf5.py  file_sdf.py  file_sm_netcdf.py  file_stk.py  file_tif.py  file_xrm.py
images/: Mantis_logo.icns
installer_files/: mantis-linux.spec  mantis-mac.spec  mantis-win.spec
mantis-xray/: Mrc.py  data_struct.py  nnma.py
mantis-xray/TomoCS/: forward_backward_tv.py
mantis-xray/file_plugins/: __init__.py  file_bim.py  file_dataexch_hdf5.py  (+2 more)
mantis_xray/: __init__.py  __main__.py  analyze.py  data_stack.py  data_struct.py  dialogalign.ui  dialogsave.ui  helpers.py  henke.py  logos.py  mantis.py  mantis_qt.py  mantis_qt_deprecated.py  nnma.py  pageloaddata.ui  pagemap.ui  pagepca.ui  pagestack.ui  showalign2.ui  showartefacts.ui  showhistogram.ui  showmulticrop.ui  showodmap.ui  stylesheet_global.qss  tomo_reconstruction.py
search/: search_index.json
(+71 files in other folders)
