[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mantis-xray"
authors = [
	{name = "Mirna Lerotic", email = "mirna@2ndlookconsulting.com"},
]
description = "MANTiS is a Multivariate ANalysis Tool for x-ray Spectromicroscopy"
readme = "README.md"
requires-python = ">=3"
keywords = ["spectromicroscopy", "microspectroscopy", "stxm", "hyperspectral", "imaging", "image"]
license = "GPL-3.0-or-later"
classifiers = [
	"Development Status :: 5 - Production/Stable",
	"Programming Language :: Python",
	"Programming Language :: Python :: 3",
	"Operating System :: OS Independent",
	"Topic :: Scientific/Engineering",
	"Topic :: Scientific/Engineering :: Image Processing",
	"Topic :: Scientific/Engineering :: Visualization",
	"Intended Audience :: Science/Research"
]
dependencies = [
	'PyQt5>=5.15.9',
	'numpy',
	'scipy>=1.11.4', 
	'matplotlib>=3.6.0', 
	'h5py', 
	'Pillow', 
	'lxml', 
	'pyqtgraph>=0.13.7',
	"scikit-image>=0.19.1",
	"xdrlib3"
]
dynamic = ["version"]

[project.urls]
homepage = "https://spectromicroscopy.com"
documentation = "https://docs.spectromicroscopy.com"
source = "https://github.com/mlerotic/spectromicroscopy"
issues = "https://github.com/mlerotic/spectromicroscopy/issues"

[project.optional-dependencies]
netCDF = ["netcdf4-python"]

[project.gui-scripts]
mantis-xray = "mantis_xray.mantis_qt:main"

[tool.setuptools]
packages = ["mantis_xray", "mantis_xray.file_plugins", "mantis_xray.images", "mantis_xray.TomoCS"]

[tool.setuptools.dynamic]
version = {attr = "mantis_xray.__version__"}
